// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mdx-loader snapshot with body 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const _frontmatter = {};
const layoutProps = {
  _frontmatter,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3],
};
const layoutProps = {
  _frontmatter,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-isDevelopStage 1`] = `
import MDXContent from "/frontmatter-isDevelopStage?type=component";
export default MDXContent;
export * from "/frontmatter-isDevelopStage?type=component";

export const _frontmatter = { one: "two", three: 4, array: [1, 2, 3] };

`;

exports[`mdx-loader snapshot with frontmatter-isDevelopStage 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

const layoutProps = {};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-isDevelopStage-lessBabel 1`] = `
import MDXContent from "/frontmatter-isDevelopStage-lessBabel?type=component";
export default MDXContent;
export * from "/frontmatter-isDevelopStage-lessBabel?type=component";

export const _frontmatter = { one: "two", three: 4, array: [1, 2, 3] };

`;

exports[`mdx-loader snapshot with frontmatter-isDevelopStage-lessBabel 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

const layoutProps = {};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-layout 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3],
};
const layoutProps = {
  _frontmatter,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-layout-isDevelopStage 1`] = `
import MDXContent from "/frontmatter-layout-isDevelopStage?type=component";
export default MDXContent;
export * from "/frontmatter-layout-isDevelopStage?type=component";

export const _frontmatter = { one: "two", three: 4, array: [1, 2, 3] };

`;

exports[`mdx-loader snapshot with frontmatter-layout-isDevelopStage 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

const layoutProps = {};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-layout-isDevelopStage-lessBabel 1`] = `
import MDXContent from "/frontmatter-layout-isDevelopStage-lessBabel?type=component";
export default MDXContent;
export * from "/frontmatter-layout-isDevelopStage-lessBabel?type=component";

export const _frontmatter = { one: "two", three: 4, array: [1, 2, 3] };

`;

exports[`mdx-loader snapshot with frontmatter-layout-isDevelopStage-lessBabel 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

const layoutProps = {};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-layout-lessBabel 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3],
};
const layoutProps = {
  _frontmatter,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-layout-namedExports 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3],
};
const layoutProps = {
  meta,
  _frontmatter,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-layout-namedExports-isDevelopStage 1`] = `
import MDXContent from "/frontmatter-layout-namedExports-isDevelopStage?type=component";
export default MDXContent;
export * from "/frontmatter-layout-namedExports-isDevelopStage?type=component";

export const _frontmatter = { one: "two", three: 4, array: [1, 2, 3] };

`;

exports[`mdx-loader snapshot with frontmatter-layout-namedExports-isDevelopStage 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
const layoutProps = {
  meta,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-layout-namedExports-isDevelopStage-lessBabel 1`] = `
import MDXContent from "/frontmatter-layout-namedExports-isDevelopStage-lessBabel?type=component";
export default MDXContent;
export * from "/frontmatter-layout-namedExports-isDevelopStage-lessBabel?type=component";

export const _frontmatter = { one: "two", three: 4, array: [1, 2, 3] };

`;

exports[`mdx-loader snapshot with frontmatter-layout-namedExports-isDevelopStage-lessBabel 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
const layoutProps = {
  meta,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-layout-namedExports-lessBabel 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3],
};
const layoutProps = {
  meta,
  _frontmatter,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-lessBabel 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3],
};
const layoutProps = {
  _frontmatter,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-namedExports 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3],
};
const layoutProps = {
  meta,
  _frontmatter,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-namedExports-isDevelopStage 1`] = `
import MDXContent from "/frontmatter-namedExports-isDevelopStage?type=component";
export default MDXContent;
export * from "/frontmatter-namedExports-isDevelopStage?type=component";

export const _frontmatter = { one: "two", three: 4, array: [1, 2, 3] };

`;

exports[`mdx-loader snapshot with frontmatter-namedExports-isDevelopStage 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
const layoutProps = {
  meta,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-namedExports-isDevelopStage-lessBabel 1`] = `
import MDXContent from "/frontmatter-namedExports-isDevelopStage-lessBabel?type=component";
export default MDXContent;
export * from "/frontmatter-namedExports-isDevelopStage-lessBabel?type=component";

export const _frontmatter = { one: "two", three: 4, array: [1, 2, 3] };

`;

exports[`mdx-loader snapshot with frontmatter-namedExports-isDevelopStage-lessBabel 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
const layoutProps = {
  meta,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with frontmatter-namedExports-lessBabel 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
export const _frontmatter = {
  one: "two",
  three: 4,
  array: [1, 2, 3],
};
const layoutProps = {
  meta,
  _frontmatter,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with isDevelopStage 1`] = `
import MDXContent from "/isDevelopStage?type=component";
export default MDXContent;
export * from "/isDevelopStage?type=component";

export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with isDevelopStage 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

const layoutProps = {};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with isDevelopStage-lessBabel 1`] = `
import MDXContent from "/isDevelopStage-lessBabel?type=component";
export default MDXContent;
export * from "/isDevelopStage-lessBabel?type=component";

export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with isDevelopStage-lessBabel 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

const layoutProps = {};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with layout 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const _frontmatter = {};
const layoutProps = {
  _frontmatter,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with layout-isDevelopStage 1`] = `
import MDXContent from "/layout-isDevelopStage?type=component";
export default MDXContent;
export * from "/layout-isDevelopStage?type=component";

export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with layout-isDevelopStage 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

const layoutProps = {};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with layout-isDevelopStage-lessBabel 1`] = `
import MDXContent from "/layout-isDevelopStage-lessBabel?type=component";
export default MDXContent;
export * from "/layout-isDevelopStage-lessBabel?type=component";

export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with layout-isDevelopStage-lessBabel 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

const layoutProps = {};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with layout-lessBabel 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const _frontmatter = {};
const layoutProps = {
  _frontmatter,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with layout-namedExports 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
export const _frontmatter = {};
const layoutProps = {
  meta,
  _frontmatter,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with layout-namedExports-isDevelopStage 1`] = `
import MDXContent from "/layout-namedExports-isDevelopStage?type=component";
export default MDXContent;
export * from "/layout-namedExports-isDevelopStage?type=component";

export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with layout-namedExports-isDevelopStage 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
const layoutProps = {
  meta,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with layout-namedExports-isDevelopStage-lessBabel 1`] = `
import MDXContent from "/layout-namedExports-isDevelopStage-lessBabel?type=component";
export default MDXContent;
export * from "/layout-namedExports-isDevelopStage-lessBabel?type=component";

export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with layout-namedExports-isDevelopStage-lessBabel 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
const layoutProps = {
  meta,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with layout-namedExports-lessBabel 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
export const _frontmatter = {};
const layoutProps = {
  meta,
  _frontmatter,
};

const MDXLayout = ({ children, ...props }) => <div>{children}</div>;

export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with lessBabel 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const _frontmatter = {};
const layoutProps = {
  _frontmatter,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with namedExports 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
export const _frontmatter = {};
const layoutProps = {
  meta,
  _frontmatter,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with namedExports-isDevelopStage 1`] = `
import MDXContent from "/namedExports-isDevelopStage?type=component";
export default MDXContent;
export * from "/namedExports-isDevelopStage?type=component";

export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with namedExports-isDevelopStage 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
const layoutProps = {
  meta,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with namedExports-isDevelopStage-lessBabel 1`] = `
import MDXContent from "/namedExports-isDevelopStage-lessBabel?type=component";
export default MDXContent;
export * from "/namedExports-isDevelopStage-lessBabel?type=component";

export const _frontmatter = {};

`;

exports[`mdx-loader snapshot with namedExports-isDevelopStage-lessBabel 2`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
const layoutProps = {
  meta,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;

exports[`mdx-loader snapshot with namedExports-lessBabel 1`] = `
import * as React from "react";
/* @jsx mdx */
import { mdx } from "@mdx-js/react";
/* @jsx mdx */

export const meta = {
  author: "chris",
};
export const _frontmatter = {};
const layoutProps = {
  meta,
  _frontmatter,
};
const MDXLayout = "wrapper";
export default function MDXContent({ components, ...props }) {
  return (
    <MDXLayout
      {...layoutProps}
      {...props}
      components={components}
      mdxType="MDXLayout"
    >
      <h1>{\`Some title\`}</h1>
      <p>{\`a bit of a paragraph\`}</p>
      <p>{\`some content\`}</p>
    </MDXLayout>
  );
}
MDXContent.isMDXComponent = true;

`;
